overflow bug fix

--- a/assets/css/contact-media-queries.css
+++ b/assets/css/contact-media-queries.css
@@ -232,6 +232,7 @@
     }
     #add-contact-card{
         align-items: flex-start;
+        overflow: auto;
     }
 
     #design-sector{
